# RotatingartLauncher

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  COMMIT_MESSAGE.md  RAEDME.md  README.md  README_EN.md  README_ZH.md  apply_sdl_patches.ps1  apply_sdl_patches.sh  build.gradle  build_log.txt  codemagic.yaml  color_picker_demo.html  contributor_stats.txt  gradle.properties  gradle_output.txt  log.txt  logcat.txt  settings.gradle  settings.gradle.kts
.claude/: settings.local.json
.cursor/: scratchpad.md
.cursor/rules/: riper-5.mdc
.github/: FUNDING.yml
.github/workflows/: build-apk.yml  build-debug-apk.yml  build.yml  sync-fork.yml
app/: build.gradle  build.gradle.kts  temp_deps_patched.json
app/src/main/cpp/: CMakeLists.txt  SDL_android_main.c  app_log.h  app_logger.c  app_logger.h  console_bridge.c  console_bridge.h  corehost_trace_redirect.cpp  corehost_trace_redirect.h  custom_egl.c  dotnet_host.c  dotnet_params.c  dotnet_params.h  error_handler.c  framework_utils.cpp  framework_utils.h  hostpolicy_hook.cpp  hostpolicy_hook.h  jni_bridge.c  jni_bridge.h  netcorehost_launcher.cpp  netcorehost_launcher.h  sdl_entry.c  touch_bridge.c  virtual_mouse_sdl.c  vulkan_turnip_loader.c
app/src/main/cpp/FMOD_SDL_BUILD_DEPS/: CMakeLists.txt
app/src/main/cpp/SDL/android-project/app/src/main/java/org/libsdl/app/: SDLAudioManager.java
app/src/main/cpp/SDL/include/: SDL_hints.h
app/src/main/cpp/SDL/src/audio/aaudio/: SDL_aaudio.c
app/src/main/cpp/SDL/src/core/android/: SDL_android.c
app/src/main/cpp/SDL/src/events/: SDL_mouse.c  SDL_touch.c
app/src/main/cpp/SDL/src/video/: SDL_egl.c
app/src/main/cpp/SDL/src/video/android/: SDL_androidgl.c  SDL_androidgl4es.c  SDL_androidmouse.c  SDL_androidmouse.h  SDL_androidrenderer.c  SDL_androidrenderer.h  SDL_androidtouch.c  SDL_androidvideo.c  SDL_androidwindow.c
app/src/main/cpp/SDL_patches/: CHANGES_SUMMARY.md  sdl2-custom-modifications.patch
app/src/main/cpp/SDL_patches/patches/: 01_platform_spoof.patch  02_assert_fix.patch  03_aaudio_lowlatency.patch  04_android_jni.patch  05_android_jni_h.patch  06_mouse_range.patch  07_touch_multitouch.patch  08_joystick_rumble.patch  09_egl_renderers.patch  10_android_gl.patch  11_android_mouse.patch  12_android_video.patch  13_android_window.patch  14_main_entry.patch  15_sensor_fix.patch  16_new_android_renderer.c  16_new_android_renderer.h  17_java_SDLActivity.patch  18_java_SDLControllerManager.patch  19_java_SDLSurface.patch  20_java_SDL.patch  21_java_SDLAudioManager.patch  22_new_VirtualXboxController.java  README.md
app/src/main/cpp/agl_adapter/: agl_android.c  agl_android.h
app/src/main/cpp/common/: netcorehost_common.cpp
app/src/main/cpp/gl4es/: Application.mk  CMakeLists.txt
app/src/main/cpp/gl4es/src/gl/: init.c
app/src/main/cpp/glibc_bridge/: CMakeLists.txt
app/src/main/cpp/glibc_bridge/src/: glibc_bridge_sharedlib.c  glibc_bridge_stdio.c
app/src/main/cpp/glibc_bridge/src/compat/: error_hook.c  error_hook.h  root.c  root.h  stdio.c  tls.c  tls.h
app/src/main/cpp/glibc_bridge/src/core/: core.c  loader.c  runner.c
app/src/main/cpp/glibc_bridge/src/elf/: dynlink.c  elf_loader.c  log.c  log.h  reloc.c  resolver.c  symbol_table.c
app/src/main/cpp/glibc_bridge/src/include/: api.h  private.h  wrappers.h
app/src/main/cpp/glibc_bridge/src/jni/: jni.c
app/src/main/cpp/glibc_bridge/src/wrappers/: wrapper_cxx.c  wrapper_dl.c  wrapper_fortify.c  wrapper_fs.c  wrapper_gettext.c  wrapper_ipc.c  wrapper_libc.c  wrapper_locale.c  wrapper_math.c  wrapper_misc.c  wrapper_mlock.c  wrapper_network.c  wrapper_path.c  wrapper_path.h  wrapper_process.c  wrapper_pthread.c  wrapper_search.c  wrapper_signal.c  wrapper_stat.c  wrapper_stdio.c  wrapper_string.c  wrapper_sysinfo.c  wrapper_thread.c  wrapper_time.c  wrapper_wchar.c
app/src/main/cpp/linkerhook/: linkerhook.c
app/src/main/cpp/main/: CMakeLists.txt  app_logger.c  app_logger_jni.c  box64_launcher.cpp  corehost_trace_redirect.cpp  jni_entry.c  jni_entry.h  osm_renderer.c  sdl_entry.c  sdl_input_bridge_extend.c  sdl_text_bridge.c  shared_envvars.cpp  thread_affinity_manager.cpp  virtual_mouse_sdl.c  vulkan_turnip_loader.h
app/src/main/cpp/main/And64InlineHook/: And64InlineHook.cpp
app/src/main/cpp/main/core/: game_launcher.cpp
app/src/main/cpp/main/dotnet/: corehost_hooks.cpp  dotnet_launcher.cpp
app/src/main/cpp/main/logging/: app_log.c  app_log.h
app/src/main/cpp/main/osmesa/: osm_renderer_jni.c
app/src/main/cpp/main/utils/: native_methods.cpp
app/src/main/cpp/netcorehost/: CMakeLists.txt
app/src/main/cpp/netcorehost/include/netcorehost/: bindings.hpp
app/src/main/cpp/netcorehost/src/: hostfxr.cpp  nethost_stub.cpp
app/src/main/cpp/osmesa/: osm_bridge.c  vulkan_loader.h
build-tools/: .gitignore  add_coreclr_logs.sh  build_coreclr_android_debug.ps1  build_coreclr_simple.sh  build_coreclr_wsl.ps1  build_corehost.sh  build_corehost_wsl.ps1  build_hostfxr_android.ps1  build_hostpolicy_android.ps1
build-tools/bootstrap/: Program.cs
docs/: ANDROID_AS_LINUX.md  FNA3D_GLES_CHANGES_SUMMARY.md  FNA3D_GLES_OPTIMIZATION.md  HOSTFXR_PATCH_INJECTION.md  HOSTPOLICY_BUILD_GUIDE.md  OSMESA_ZINK_INTEGRATION.md  VIRTUAL_BUTTON_XBOX_CONTROLLER.md  VIRTUAL_JOYSTICK_SDL_MODE.md  XBOX_CONTROLLER_ARCHITECTURE.md  XBOX_CONTROLLER_EMULATION.md  XBOX_CONTROLLER_QUICK_REFERENCE.md  XBOX_JOYSTICK_BUTTON_IMPLEMENTATION.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
patches/: ANGLE_Renderer_Fix.md  FNA3D_Android_UI_Performance.md  FNA3D_UI_Performance_Optimization.md  FPSOptimizer_修复版.cs  GL4ES_vs_FNA3D_GLES3_Optimization.md  GLES3修复指南.md  OPENGL_VerifySampler_optimized.c  SDL_PojavLauncher_EGL_Loader.md  apply_fna3d_fix.sh  build_and_package.ps1  gles3_glGetTexImage_fix.c  修复_GetTextureData2D_断言错误.md  完整GLES3修复步骤.md  性能优化总结.md
patches/ConsolePatch/: ConsolePatcher.cs  StartupHook.cs  patch.json
patches/EverestPatch/: EverestPatch.sln  (+3 more)
ralib/: build.gradle
scripts/: pack_runtime_libs.ps1  translate_missing_strings.py
shared/: build.gradle.kts
workflows/: build-apk.yml
(+772 files in other folders)
